@@ -2,15 +2,14 @@ package com.hartwig.hmftools.cobalt.targeted;
 
 import static java.lang.Math.max;
 import static java.lang.Math.min;
-import static java.lang.String.format;
 
 import static com.hartwig.hmftools.cobalt.CobaltConfig.CB_LOGGER;
-import static com.hartwig.hmftools.common.region.BedFileReader.loadBedFile;
 import static com.hartwig.hmftools.common.genome.gc.GCProfileFactory.GC_PROFILE;
 import static com.hartwig.hmftools.common.genome.gc.GCProfileFactory.addGcProfilePath;
 import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource.REF_GENOME;
 import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource.REF_GENOME_CFG_DESC;
 import static com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource.loadRefGenome;
+import static com.hartwig.hmftools.common.region.BedFileReader.loadBedFile;
 import static com.hartwig.hmftools.common.utils.config.CommonConfig.TARGET_REGIONS_BED;
 import static com.hartwig.hmftools.common.utils.config.CommonConfig.TARGET_REGIONS_BED_DESC;
 import static com.hartwig.hmftools.common.utils.config.ConfigUtils.addLoggingOptions;
@@ -34,9 +33,9 @@ import com.hartwig.hmftools.cobalt.norm.GcProfileCache;
 import com.hartwig.hmftools.common.genome.gc.GCProfile;
 import com.hartwig.hmftools.common.genome.gc.GcCalcs;
 import com.hartwig.hmftools.common.genome.refgenome.RefGenomeSource;
-import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
 import com.hartwig.hmftools.common.region.BaseRegion;
 import com.hartwig.hmftools.common.region.ChrBaseRegion;
+import com.hartwig.hmftools.common.utils.config.ConfigBuilder;
 
 public class TargetedRegionAnalyser
 {
@@ -44,7 +43,7 @@ public class TargetedRegionAnalyser
     private final GcProfileCache mGcProfileCache;
     private final RefGenomeSource mRefGenome;
     private final String mOutputDir;
-    private BufferedWriter mWriter;
+    private final BufferedWriter mWriter;
 
     private static final int PROBE_LENGTH = 120;
 
@@ -75,17 +74,19 @@ public class TargetedRegionAnalyser
     {
         CB_LOGGER.info("running Cobalt targeted region GC analyser");
 
-        Map<String,List<GCProfile>> chrGcProfileMap = mGcProfileCache.chrGcProfiles();
+        Map<String, List<GCProfile>> chrGcProfileMap = mGcProfileCache.chrGcProfiles();
 
-        for(Map.Entry<String,List<GCProfile>> entry : chrGcProfileMap.entrySet())
+        for(Map.Entry<String, List<GCProfile>> entry : chrGcProfileMap.entrySet())
         {
             String chromosome = entry.getKey();
             List<GCProfile> gcProfiles = entry.getValue();
 
-            List<ChrBaseRegion> regions = mTargetRegions.stream().filter(x -> x.Chromosome.equals(chromosome)).collect(Collectors.toList());
+            List<ChrBaseRegion> regions = mTargetRegions.stream().filter(x -> x.Chromosome.equals(chromosome)).toList();
 
             if(regions.isEmpty())
+            {
                 continue;
+            }
 
             int regionIndex = 0;
             ChrBaseRegion currentRegion = regions.get(regionIndex);
@@ -93,10 +94,12 @@ public class TargetedRegionAnalyser
             for(GCProfile gcProfile : gcProfiles)
             {
                 if(gcProfile.end() < currentRegion.start())
+                {
                     continue;
+                }
 
                 int regionBaseCount = 0;
-                String regionBaseSequence = "";
+                StringBuilder regionBaseSequence = new StringBuilder();
                 List<BaseRegion> overlappingRegions = Lists.newArrayList();
                 boolean regionOverlapsWindows = false;
 
@@ -140,7 +143,7 @@ public class TargetedRegionAnalyser
                     try
                     {
                         String overlapSequence = mRefGenome.getBaseString(chromosome, regionOverlapStart, regionOverlapEnd);
-                        regionBaseSequence += overlapSequence;
+                        regionBaseSequence.append(overlapSequence);
                     }
                     catch(Exception e)
                     {
@@ -155,12 +158,14 @@ public class TargetedRegionAnalyser
                     ++regionIndex;
 
                     if(regionIndex >= regions.size())
+                    {
                         break;
+                    }
 
                     currentRegion = regions.get(regionIndex);
                 }
 
-                double regionGc = GcCalcs.calcGcPercent(regionBaseSequence);
+                double regionGc = GcCalcs.calcGcPercent(regionBaseSequence.toString());
 
                 writeGcWindowData(gcProfile, regionBaseCount, regionGc, overlappingRegions);
 
@@ -171,7 +176,9 @@ public class TargetedRegionAnalyser
                 }
 
                 if(regionIndex >= regions.size())
+                {
                     break;
+                }
             }
         }
 
@@ -187,24 +194,26 @@ public class TargetedRegionAnalyser
             String outputFile = mOutputDir + "target_regions_gc_data.tsv";
             BufferedWriter writer = createBufferedWriter(outputFile, false);
 
-            writer.write(format("Chromosome\tGcWindowStart\tGcWindowEnd\tWindowGc\tRegionBaseCount\tRegionGc\tRegionIntervals\tWindowMappability"));
+            writer.write("Chromosome\tGcWindowStart\tGcWindowEnd\tWindowGc\tRegionBaseCount\tRegionGc\tRegionIntervals\tWindowMappability");
             writer.newLine();
             return writer;
         }
         catch(IOException e)
         {
-            e.printStackTrace();
-            CB_LOGGER.error("failed to write target regions GC data", e.toString());
+            CB_LOGGER.error("failed to write target regions GC data", e);
             System.exit(1);
         }
 
         return null;
     }
 
-    private void writeGcWindowData(final GCProfile gcProfile, int regionBaseCount, double regionGc, final List<BaseRegion> overlappingRegions)
+    private void writeGcWindowData(final GCProfile gcProfile, int regionBaseCount, double regionGc,
+            final List<BaseRegion> overlappingRegions)
     {
         if(mWriter == null)
+        {
             return;
+        }
 
         try
         {
@@ -226,8 +235,7 @@ public class TargetedRegionAnalyser
         }
         catch(IOException e)
         {
-            e.printStackTrace();
-            CB_LOGGER.error("failed to write target regions GC data", e.toString());
+            CB_LOGGER.error("failed to write target regions GC data", e);
             System.exit(1);
         }
     }
