@@ -4,29 +4,36 @@ import static java.lang.Math.min;
 import static java.lang.Math.round;
 
 import static com.hartwig.hmftools.common.genome.region.Strand.NEG_STRAND;
+import static com.hartwig.hmftools.common.redux.BaseQualAdjustment.LOW_BASE_QUAL_THRESHOLD;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
-import static com.hartwig.hmftools.lilac.LilacConstants.LOW_BASE_QUAL_THRESHOLD;
 import static com.hartwig.hmftools.lilac.LilacUtils.calcNucelotideLocus;
 import static com.hartwig.hmftools.lilac.LilacUtils.formRange;
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
+import static com.hartwig.hmftools.lilac.evidence.Nucleotide.MISSING_BASE_QUAL;
 import static com.hartwig.hmftools.lilac.fragment.FragmentUtils.calcAminoAcidIndices;
 import static com.hartwig.hmftools.lilac.fragment.FragmentUtils.expandIndices;
 import static com.hartwig.hmftools.lilac.seq.HlaSequence.DEL_STR;
 
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.PriorityQueue;
+import java.util.Queue;
 import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import com.hartwig.hmftools.common.codon.Codons;
+import com.hartwig.hmftools.common.codon.Nucleotides;
 import com.hartwig.hmftools.common.utils.SuffixTree;
 import com.hartwig.hmftools.lilac.ReferenceData;
 import com.hartwig.hmftools.lilac.evidence.Nucleotide;
 import com.hartwig.hmftools.lilac.hla.HlaGene;
+import com.hartwig.hmftools.lilac.read.Indel;
 import com.hartwig.hmftools.lilac.read.Read;
 import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
 
@@ -35,11 +42,9 @@ public class NucleotideFragmentFactory
     private final ReferenceData mReferenceData;
     private final LinkedHashMap<HlaSequenceLoci, SuffixTree> mInsertSuffixTrees;
     private final LinkedHashMap<HlaSequenceLoci, SuffixTree> mDeleteSuffixTrees;
-    private final byte mMinBaseQuality;
 
     public NucleotideFragmentFactory(final ReferenceData referenceData)
     {
-        mMinBaseQuality = LOW_BASE_QUAL_THRESHOLD;
         mReferenceData = referenceData;
 
         mInsertSuffixTrees = Maps.newLinkedHashMap();
@@ -64,11 +69,12 @@ public class NucleotideFragmentFactory
 
         int readLength = read.ReadIndexEnd - read.ReadIndexStart + 1;
         final char[] codingRegionReadBases = new char[readLength];
+        final boolean[] codingRegionIsLowQuals = new boolean[readLength];
         final byte[] codingRegionQualities = new byte[readLength];
 
-        read.populateCodingRegion(codingRegionReadBases, codingRegionQualities, reverseStrand);
+        read.populateCodingRegion(codingRegionReadBases, codingRegionIsLowQuals, codingRegionQualities, reverseStrand);
 
-        if(read.containsIndel() || read.containsSoftClip())
+        if(read.containsValidIndel() || read.containsSoftClip())
         {
             List<Integer> aminoAcidIndices = calcAminoAcidIndices(samCodingStartLoci, samCodingEndLoci);
             int firstAAIndex = aminoAcidIndices.get(0);
@@ -86,8 +92,8 @@ public class NucleotideFragmentFactory
 
             if(!aminoAcids.isEmpty())
             {
-                int matchRangeAllowedStart = firstAAIndex - read.SoftClippedStart / 3 - read.maxIndelSize();
-                int matchRangeAllowedEnd = firstAAIndex + read.maxIndelSize() + read.SoftClippedEnd / 3;
+                int matchRangeAllowedStart = firstAAIndex - read.SoftClippedStart / 3 - read.maxValidIndelSize();
+                int matchRangeAllowedEnd = firstAAIndex + read.maxValidIndelSize() + read.SoftClippedEnd / 3;
 
                 Fragment matchedFragment = checkMatchedInsertDeleteSequence(
                         read, geneName, aminoAcids, matchRangeAllowedStart, matchRangeAllowedEnd, mInsertSuffixTrees);
@@ -102,7 +108,7 @@ public class NucleotideFragmentFactory
                     return matchedFragment;
             }
 
-            if(read.containsIndel())
+            if(read.containsValidIndel())
                 return null;
         }
 
@@ -112,11 +118,68 @@ public class NucleotideFragmentFactory
         int rangeLength = samCodingEndLoci - samCodingStartLoci + 1;
         List<Nucleotide> nucleotides = Lists.newArrayListWithCapacity(rangeLength);
 
-        for(int i = 0; i < rangeLength; ++i)
+        Queue<Indel> indelQueue = new PriorityQueue<>(Comparator.comparingInt((Indel x) -> x.ReadIndex));
+        indelQueue.addAll(read.getIgnoredIndels());
+
+        final int inc = reverseStrand ? -1 : 1;
+        final int iStart = reverseStrand ? readLength - 1 : 0;
+        int samCodingLoci = reverseStrand ? samCodingEndLoci : samCodingStartLoci;
+        int readIndex = read.ReadIndexStart;
+        for(int i = iStart; i >= 0 && i < readLength; )
         {
+            if(!indelQueue.isEmpty() && indelQueue.peek().ReadIndex < readIndex)
+                indelQueue.poll();
+
+            Indel currentIndel = null;
+            if(!indelQueue.isEmpty() && indelQueue.peek().ReadIndex == readIndex)
+                currentIndel = indelQueue.poll();
+
+            if(currentIndel == null)
+            {
+                nucleotides.add(new Nucleotide(
+                        samCodingLoci, codingRegionIsLowQuals[i], codingRegionQualities[i], String.valueOf(codingRegionReadBases[i])));
+
+                samCodingLoci += inc;
+                readIndex++;
+                i += inc;
+                continue;
+            }
+
+            if(currentIndel.IsInsert)
+            {
+                nucleotides.add(new Nucleotide(
+                        samCodingLoci, codingRegionIsLowQuals[i], codingRegionQualities[i], String.valueOf(codingRegionReadBases[i])));
+
+                samCodingLoci += inc;
+                readIndex += 1 + currentIndel.Length;
+                i += inc * (1 + currentIndel.Length);
+                continue;
+            }
+
+            // currentIndel is del
             nucleotides.add(new Nucleotide(
-                    samCodingStartLoci + i, codingRegionQualities[i], String.valueOf(codingRegionReadBases[i])));
+                    samCodingLoci, codingRegionIsLowQuals[i], codingRegionQualities[i], String.valueOf(codingRegionReadBases[i])));
+            samCodingLoci += inc;
+            readIndex++;
+            i += inc;
+
+            for(int j = 1; j < currentIndel.Ref.length(); j++)
+            {
+                if(samCodingLoci < samCodingStartLoci || samCodingLoci > samCodingEndLoci)
+                    break;
+
+                char base = currentIndel.Ref.charAt(j);
+                if(reverseStrand)
+                    base = Nucleotides.swapDnaBase(base);
+
+                nucleotides.add(Nucleotide.createHighQual(samCodingLoci, String.valueOf(base)));
+
+                samCodingLoci += inc;
+            }
         }
+
+        if(reverseStrand)
+            Collections.reverse(nucleotides);
 
         return new Fragment(read, geneName, Sets.newHashSet(geneName), nucleotides);
     }
@@ -157,7 +220,7 @@ public class NucleotideFragmentFactory
         return null;
     }
 
-    private Fragment createIndelFragment(
+    private static Fragment createIndelFragment(
             final Read record, final HlaGene geneName, final int startLoci, final String bamSequence, final HlaSequenceLoci hlaSequence)
     {
         int endLoci = endLoci(startLoci, bamSequence, hlaSequence);
@@ -171,9 +234,8 @@ public class NucleotideFragmentFactory
                 .map(NucleotideFragmentFactory::createNucleotidesFromAminoAcid)
                 .forEach(nucleotides::addAll);
 
-        List<Byte> qualities = nucleotideLoci.stream().map(x -> mMinBaseQuality).collect(Collectors.toList());
-
-        return new Fragment(record, geneName, Sets.newHashSet(geneName), nucleotideLoci, qualities, nucleotides);
+        List<Boolean> isLowQuals = nucleotideLoci.stream().map(x -> false).toList();
+        return Fragment.createFromIsLowQuals(record, geneName, Sets.newHashSet(geneName), nucleotideLoci, isLowQuals, nucleotides);
     }
 
     private static int endLoci(int startLoci, final String bamSequence, final HlaSequenceLoci hlaSequence)
@@ -218,34 +280,37 @@ public class NucleotideFragmentFactory
         return FragmentUtils.mergeFragmentsById(fragments).get(0);
     }
 
-    public byte calculatePercentileBaseQuality(final Iterable<Fragment> fragments, double percentile)
+    public static byte calculatePercentileBaseQuality(final Iterable<Fragment> fragments, double percentile)
     {
         // calculates the nth percentile base quality for each fragment's nucleotides
-        int maxBaseQual = mMinBaseQuality * 2;
-        int[] baseQualFrequeny = new int[maxBaseQual + 1];
+        int maxBaseQual = LOW_BASE_QUAL_THRESHOLD * 2;
+        int[] baseQualFrequency = new int[maxBaseQual + 1];
         long totalBases = 0;
 
         for(Fragment fragment : fragments)
         {
             for(byte baseQual : Nucleotide.qualities(fragment.rawNucleotidesByLoci().values()))
             {
+                if(baseQual == MISSING_BASE_QUAL)
+                    continue;
+
                 ++totalBases;
-                ++baseQualFrequeny[min(baseQual, maxBaseQual)];
+                ++baseQualFrequency[min(baseQual, maxBaseQual)];
             }
         }
 
         long percentileEntry = round(totalBases * percentile);
         long cumulativeTotal = 0;
 
-        for(int i = 0; i < baseQualFrequeny.length; ++i)
+        for(int i = 0; i < baseQualFrequency.length; ++i)
         {
-            cumulativeTotal += baseQualFrequeny[i];
+            cumulativeTotal += baseQualFrequency[i];
 
             if(cumulativeTotal >= percentileEntry)
                 return (byte) i;
         }
 
-        return mMinBaseQuality;
+        return LOW_BASE_QUAL_THRESHOLD;
     }
 
     public static Map<HlaGene, int[]> calculateGeneCoverage(final Iterable<Fragment> fragments)
