@@ -1,12 +1,12 @@
 package com.hartwig.hmftools.lilac.misc;
 
+import static com.hartwig.hmftools.common.redux.BaseQualAdjustment.LOW_BASE_QUAL_THRESHOLD;
 import static com.hartwig.hmftools.common.test.GeneTestUtils.CHR_1;
-import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_BASE_QUAL;
+import static com.hartwig.hmftools.common.test.SamRecordTestUtils.DEFAULT_BASE_QUAL;
 import static com.hartwig.hmftools.lilac.LilacUtils.formRange;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
@@ -53,7 +53,7 @@ public final class LilacTestUtils
 
     public static Fragment createFragment(final String id)
     {
-        return new Fragment(
+        return Fragment.createFromQuals(
                 createReadRecord(id), HlaGene.NONE, Sets.newHashSet(), Lists.newArrayList(), Lists.newArrayList(), Lists.newArrayList());
     }
 
@@ -61,9 +61,9 @@ public final class LilacTestUtils
     {
         List<Integer> loci = formRange(locusStart, locusEnd);
         List<String> sequences = buildTargetSequences(sequence, loci);
-        List<Byte> qualities = loci.stream().map(x -> DEFAULT_MIN_BASE_QUAL).collect(Collectors.toList());
+        List<Byte> qualities = loci.stream().map(x -> (byte) DEFAULT_BASE_QUAL).toList();
 
-        return new Fragment(createReadRecord(id), gene, Sets.newHashSet(gene), loci, qualities, sequences);
+        return Fragment.createFromQuals(createReadRecord(id), gene, Sets.newHashSet(gene), loci, qualities, sequences);
     }
 
     public static String buildTargetSequence(final String sequence, final Collection<Integer> indices)
